Revert "less useless intolerance with od"
This reverts commit d313427721404077917a2f839236e34850009183.

--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -134,14 +134,13 @@
 						VerticalAlignment="Center"/>
 					<uctl:UniversalWrapPanel Grid.Row="7"
 						Orientation="Horizontal"
+						Visibility="{x:Bind VM.Briefcase.IsWantAndCannotUseOneDrive, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}}"
 						VerticalAlignment="Center">
 						<TextBlock
-							x:Uid="OneDrive_ThisNotSynced" 
-							Foreground="{StaticResource FlashyForeground}"
-							Visibility="{x:Bind VM.Briefcase.IsWantAndCannotUseOneDrive, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}}"
+							x:Uid="OneDrive_ThisNotSynced" Foreground="{StaticResource FlashyForeground}"
 							VerticalAlignment="Center"/>
 						<AppBarButton
-							Icon="Refresh" x:Uid="Sync"
+							Icon="Refresh" x:Uid="Retry"
 							IsEnabled="{x:Bind VM.Briefcase.RuntimeData.IsConnectionAvailable, Mode=OneWay}"
 							VerticalAlignment="Center"
 							Margin="10, 0, 0, 0"
@@ -150,8 +149,8 @@
 				</Grid>
 
 				<!-- edit metadata -->
-				<!--IsEnabled="{x:Bind VM.Briefcase.IsWantAndCannotUseOneDrive, Mode=OneWay, Converter={StaticResource TrueToFalseConverter}}"-->
-				<ContentControl RelativePanel.Below="ConnectionSettings" x:Name="MBViewContainer">
+				<ContentControl RelativePanel.Below="ConnectionSettings" x:Name="MBViewContainer"
+					IsEnabled="{x:Bind VM.Briefcase.IsWantAndCannotUseOneDrive, Mode=OneWay, Converter={StaticResource TrueToFalseConverter}}">
 					<local:MetaBriefcaseView x:Name="MBView"
 						VM="{x:Bind VM, Mode=OneWay}"
 						DataContext="{x:Bind VM.Briefcase.MetaBriefcase, Mode=OneWay}"
